tests/e2e/keyword_as_service_argument2.error
Error: syntax error in story at line 1, column 21

1|    http fetch url: ""  as : ""
                          ^^^^^^^

E0141: http action `fetch` does not accept argument `as`.
